--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,9 @@
 @import 'colors';
 @import 'fonts';
 @import 'navigation';
-
+@import 'intro';
+@import 'registry';
+@import 'top';
 
 // RESETS
 
@@ -51,40 +53,6 @@ ul, li, a {
 
   &:nth-child(2n){
     background: $light-grey;
-  }
-}
-
-.intro {
-  h1 {
-    text-align: center;
-    font-size: 8rem;
-  }
-}
-
-.registry-options {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  flex-flow: row nowrap;
-
-  &__item {
-    height: 16rem;
-    background: $light-grey;
-    flex: 1 1 auto;
-    max-width: 32%;
-  }
-}
-
-.top {
-  position: absolute;
-  bottom: .25rem;
-  text-align: center;
-  width: 100%;
-
-  a {
-    color: white;
-    background-color: black;
-    padding: .25rem .5rem;
   }
 }
 
