--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 // RESETS
 
 * {
+  @include copy;
   box-sizing: border-box;
 }
 
@@ -16,6 +17,18 @@ ul, li, a {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  @include headline;
+}
+
+h2 {
+  @include subHead;
+}
+
+p {
+  @include copy;
 }
 
 // STYLES
@@ -31,6 +44,7 @@ ul, li, a {
 .content {
   flex: 1 1 auto;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   position: relative;
 }
 
