--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,10 +1,20 @@
 .intro {
+
   h1 {
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
 
 		@media (min-width: 650px){
-			font-size: 8rem;
+			font-size: 7rem;
+		}
+  }
+
+  .amp {
+    @extend h1;
+    font-size: 2rem;
+
+		@media (min-width: 650px){
+			font-size: 5rem;
 		}
   }
 }
