--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,20 +1,32 @@
 .intro {
 
+  &_icon {
+    height: 2rem;
+  }
+
   h1 {
     text-align: center;
     font-size: 3rem;
+    vertical-align: middle;
 
 		@media (min-width: 650px){
-			font-size: 7rem;
+			font-size: 5rem;
 		}
   }
 
   .amp {
     @extend h1;
-    font-size: 2rem;
+    font-size: 1rem;
+    display: block;
+    width: 100%;
+
+    @media (min-width: 475px){
+      display: inline;
+			width: auto;
+		}
 
 		@media (min-width: 650px){
-			font-size: 5rem;
+			font-size: 2rem;
 		}
   }
 }
