--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -1,6 +1,8 @@
 @import 'colors';
 
 .navigation {
+  @include title;
+  font-size: .85rem;
   flex: 0 0 4rem;
   width: 100%;
   display: flex;
@@ -16,16 +18,16 @@
 
 		@media (min-width: 650px){
 			flex-flow: row nowrap;
-			padding-top: 1.2rem;
+			padding-top: 1.4rem;
 		}
 
     &-item {
 			display: none;
       flex: 0 0 4rem;
       text-align: center;
-			padding-top: 1.4rem;
 			background: $white;
 			border-bottom: 2px $light-grey solid;
+      padding-top: 1.4rem;
 
 			@media (min-width: 650px){
 				flex: 1 1 auto;
