--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,7 +62,8 @@ p {
     justify-content: center;
 
     &:nth-child(2n){
-      background: $light-grey;
+      background: url('../images/subtle_white_feathers.png') repeat;
+      background-size: 40%;
     }
   }
 
