--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -24,6 +24,7 @@ $sackers: 'atsackersromanregular', sans-serif, serif;
 
 @mixin subHead {
 	font-family: $sackers;
+  font-size: 1.2rem;
 	font-weight: 100;
 	letter-spacing: .1em;
 	text-transform: uppercase;
