--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,32 +1,69 @@
 .intro {
+    &_icon {
+        height: 2rem;
+    }
+    h1 {
+        text-align: center;
+        font-size: 3rem;
+        vertical-align: middle;
+        @media (min-width: 650px) {
+            font-size: 5rem;
+        }
+    }
+    .amp {
+        @extend h1;
+        font-size: 1rem;
+        display: block;
+        width: 100%;
+        @media (min-width: 475px) {
+            display: inline;
+            width: auto;
+        }
+        @media (min-width: 650px) {
+            font-size: 2rem;
+        }
+    }
+    .detail {
+        display: flex;
+        flex-flow: row nowrap;
+        margin: 0 auto;
+        justify-content: center;
+        img {
+            flex: 1 1 auto;
+            max-width: 7rem;
+            &:first-child {
+                -webkit-transform: rotate(180deg);
+                -moz-transform: rotate(180deg);
+                -ms-transform: rotate(180deg);
+                -o-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+        }
+        p {
+            @include subHead;
+            font-size: 1rem;
+            flex: 0 auto;
+            margin: 0 2rem;
+        }
+    }
+    .date {
+        display: inline-block;
 
-  &_icon {
-    height: 2rem;
-  }
+        p {
+            @include subHead;
+            font-size: 1rem;
+            display: inline;
 
-  h1 {
-    text-align: center;
-    font-size: 3rem;
-    vertical-align: middle;
+            &:nth-child(3) {
+                font-size: 1.3rem;
+            }
+        }
 
-		@media (min-width: 650px){
-			font-size: 5rem;
-		}
-  }
-
-  .amp {
-    @extend h1;
-    font-size: 1rem;
-    display: block;
-    width: 100%;
-
-    @media (min-width: 475px){
-      display: inline;
-			width: auto;
-		}
-
-		@media (min-width: 650px){
-			font-size: 2rem;
-		}
-  }
+        h3 {
+            @include subHead;
+            font-size: 6rem;
+            display: inline-block;
+            margin: 0 1rem;
+        }
+    }
 }
