--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -63,6 +63,7 @@ p {
 
     &:nth-child(2n){
       background: url('../images/subtle_white_feathers.png') repeat;
+      background-color: $off-white;
       background-size: 40%;
     }
   }
@@ -74,4 +75,3 @@ p {
     max-width: 1000px;
   }
 }
-
