--- a/app/styles/_addThisEvent.scss
+++ b/app/styles/_addThisEvent.scss
@@ -1,31 +1,45 @@
 .addthisevent {
 
 	&-drop {
+		@include thin-btn;
 		cursor: pointer;
 		position: relative;
-		margin: 0 auto;
-		padding: 1rem 2rem;
+		margin: .8rem auto 0  auto;
+		padding: .8rem 2rem;
 		width: 100%;
+
+		&:hover {
+			@include thin-btn-hover;
+		}
 
 		@media (min-width: 650px){
 			width: 12rem;
 		}
 
 		span {
-			border: 1px solid $light-grey;
 			background-color: $white;
 			display: none;
 			width: 100%;
 			height: 3.5rem;
 			padding: 1rem 0;
-			border-bottom: 1px solid $light-grey;
 			position: absolute;
 
 			@for $i from 1 through 5 {
-		    &:nth-child(#{$i}) {
-		      top: calc(#{$i} * 3.5rem);
-		    }
+			    &:nth-child(#{$i}) {
+			      top: calc((#{$i} - 1) * 3.5rem);
+			    }
 			}
+		}
+	}
+
+	&_dropdown {
+
+		span {
+			border: $thin-border;
+			border-color: $white;
+			border-top: 0;
+			background-color: $black;
+			color: $white;
 		}
 	}
 
@@ -40,4 +54,9 @@
 			}
 		}
 	}
+}
+
+.frs {
+    font-size: 0.6rem;
+	border: 0;
 }
