--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -20,6 +20,7 @@ $sackers: 'atsackersromanregular', sans-serif, serif;
 	font-family: $oswald;
 	letter-spacing: .08em;
 	text-transform: uppercase;
+    text-align: center;
 }
 
 @mixin subHead {
@@ -27,6 +28,7 @@ $sackers: 'atsackersromanregular', sans-serif, serif;
 	font-weight: 100;
 	letter-spacing: .1em;
 	text-transform: uppercase;
+    text-align: center;
 }
 
 @mixin title {
@@ -34,10 +36,12 @@ $sackers: 'atsackersromanregular', sans-serif, serif;
 	font-weight: 400;
 	letter-spacing: .1em;
 	text-transform: uppercase;
+    text-align: center;
 }
 
 @mixin copy {
 	font-family: $raleway;
 	font-weight: 400;
 	line-height: 1.6em;
+    text-align: left;
 }
