--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -5,7 +5,7 @@
     width: 100%;
     display: flex;
     background: $black;
-    border-bottom: 2px $light-grey solid;
+    border-bottom: 2px $off-white solid;
     z-index: 99;
     &__list {
         background: $black;
@@ -23,7 +23,7 @@
             display: none;
             flex: 0 0 4rem;
             text-align: center;
-            border-bottom: 2px $light-grey solid;
+            border-bottom: $thin-border;
             padding-top: 1.4rem;
             @media (min-width: 650px) {
                 color: $off-white;
