--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,37 +1,63 @@
 .intro {
+
     &_icon {
         height: 2.5rem;
     }
+
     h1 {
         text-align: center;
         font-size: 3rem;
         margin: 2.2rem 0;
         vertical-align: middle;
+
         @media (min-width: 650px) {
             font-size: 5rem;
         }
+
+        @media (min-width: 800px) {
+            font-size: 5rem;
+        }
     }
+
     .amp {
         @extend h1;
         font-size: 1rem;
         display: block;
+        margin: 0;
         width: 100%;
+
         @media (min-width: 475px) {
             display: inline;
             width: auto;
         }
+
         @media (min-width: 650px) {
+            display: block;
+            width: 100%;
             font-size: 2rem;
         }
+
+        @media (min-width: 800px) {
+            display: inline;
+            width: auto;
+        }
     }
+
     .detail {
         display: flex;
         flex-flow: row nowrap;
         margin: 0 auto;
         justify-content: center;
+
         img {
+            display: none;
             flex: 1 1 auto;
             max-width: 7rem;
+
+            @media (min-width: 650px) {
+                display: block;
+            }
+
             &:first-child {
                 -webkit-transform: rotate(180deg);
                 -moz-transform: rotate(180deg);
@@ -40,13 +66,25 @@
                 transform: rotate(180deg);
             }
         }
+
         p {
             @include subHead;
-            font-size: 1rem;
+            font-size: 0.8rem;
             flex: 0 auto;
             margin: 0 2rem;
+            border-top: $thin-border;
+            border-bottom: $thin-border;
+
+            @media (min-width: 375px) {
+                font-size: 1rem;
+            }
+
+            @media (min-width: 650px) {
+                border: 0;
+            }
         }
     }
+
     .date {
         display: inline-block;
         position: relative;
@@ -55,25 +93,42 @@
 
         p {
             @include subHead;
-            font-size: 1rem;
+            font-size: .8rem;
             display: inline;
             vertical-align: middle;
             padding-bottom: 0.4rem;
             border-bottom: $thin-border;
 
+            @media (min-width: 375px) {
+                font-size: 1rem;
+            }
+
             &:nth-child(3) {
-                font-size: 1.3rem;
+                font-size: 1rem;
+
+                @media (min-width: 375px) {
+                    font-size: 1.3rem;
+                }
             }
         }
 
         h3 {
             @include subHead;
-            font-size: 6rem;
+            font-size: 4rem;
             display: inline-block;
-            margin: 0 1.5rem 0 1rem;
+            margin: 0 0.5rem 0 0rem;
             vertical-align: middle;
             letter-spacing: 0;
             line-height: 6.5rem;
+
+            @media (min-width: 375px) {
+                margin: 0 1rem 0 0.6rem;
+            }
+
+            @media (min-width: 650px) {
+                font-size: 6rem;
+                margin: 0 1.5rem 0 1rem;
+            }
         }
     }
 }
