--- a/app/styles/_sections.scss
+++ b/app/styles/_sections.scss
@@ -28,21 +28,29 @@
     box-sizing: content-box;
 
     &:nth-child(2n) {
+        padding: 2rem 0;
+
+        @media (min-width: 650px) {
+            padding: 4rem 0;
+        }
     }
 
     &:nth-child(2) {
-        padding: 4rem 0;
         background: url('../images/floral1.jpg') repeat;
     }
 
     &:nth-child(4) {
-        padding: 4rem 0;
         background: url('../images/floral4.jpg') repeat;
     }
   }
 
   &__enclosed {
-    padding: 4rem;
+    padding: 2rem;
+    border-radius: 2px;
+
+    @media (min-width: 650px) {
+        padding: 4rem;
+    }
   }
 
   &__content {
