--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,8 +5,8 @@
 @import 'navigation';
 @import 'intro';
 @import 'registry';
-@import 'top';
 @import 'addThisEvent';
+@import 'comingSoon';
 
 // RESETS
 
