--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,14 +1,22 @@
 .intro {
 
     &_icon {
-        height: 2.5rem;
+        height: 2rem;
+
+        @media (min-width: 475px) {
+            height: 2.5rem;
+        }
     }
 
     h1 {
         text-align: center;
         font-size: 3rem;
-        margin: 2.2rem 0;
+        margin: 1rem 0;
         vertical-align: middle;
+
+        @media (min-width: 475px) {
+            margin: 2.2rem 0;
+        }
 
         @media (min-width: 650px) {
             font-size: 5rem;
@@ -89,7 +97,10 @@
         display: inline-block;
         position: relative;
         left: -8px;
-        margin-top: 0.2rem;
+
+        @media (min-width: 475px) {
+            margin-top: 0.2rem;
+        }
 
         p {
             @include subHead;
@@ -97,10 +108,13 @@
             display: inline;
             vertical-align: middle;
             padding-bottom: 0.4rem;
-            border-bottom: $thin-border;
 
             @media (min-width: 375px) {
                 font-size: 1rem;
+            }
+
+            @media (min-width: 650px) {
+                border-bottom: $thin-border;
             }
 
             &:nth-child(3) {
