--- a/app/styles/_sections.scss
+++ b/app/styles/_sections.scss
@@ -25,21 +25,21 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    box-sizing: content-box;
+    padding: 2rem 0;
 
-    &:nth-child(2n) {
-        padding: 2rem 0;
-
-        @media (min-width: 650px) {
-            padding: 4rem 0;
-        }
+    @media (min-width: 650px) {
+        padding: 4rem 0;
     }
 
     &:nth-child(2) {
-        background: url('../images/floral1.jpg') repeat;
+        background: url('../images/floral4.jpg') repeat;
     }
 
     &:nth-child(4) {
+        background: url('../images/floral4.jpg') repeat;
+    }
+
+    &:nth-child(6) {
         background: url('../images/floral4.jpg') repeat;
     }
   }
@@ -72,6 +72,14 @@
         -ms-transform: rotate(180deg);
         -o-transform: rotate(180deg);
         transform: rotate(180deg);
+    }
+
+    .headline {
+        font-size: 1rem;
+
+        @media (min-width: 650px) {
+            font-size: 1.5rem;
+        }
     }
   }
 }
