create fixed nav

--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -1,12 +1,14 @@
 .navigation {
     @include title;
     font-size: 0.85rem;
-    flex: 0 0 4rem;
+    height: 4rem;
+    position: fixed;
     width: 100%;
     display: flex;
     background: $black;
     border-bottom: 2px $off-white solid;
     z-index: 99;
+    
     &__list {
         background: $black;
         width: 100%;
