--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -1,4 +1,10 @@
 .intro {
+    // background: url('../images/subtle_white_feathers.png') repeat;
+    // background-color: $blue;
+
+    .container__content {
+        background: 0;
+    }
 
     &_icon {
         height: 2rem;
@@ -76,7 +82,7 @@
         }
 
         p {
-            @include subHead;
+            @include title;
             font-size: 0.8rem;
             flex: 0 auto;
             margin: 0 2rem;
@@ -114,7 +120,7 @@
             }
 
             @media (min-width: 650px) {
-                border-bottom: $thin-border;
+                // border-bottom: $thin-border;
             }
 
             &:nth-child(3) {
