Fix intro styles for Tay

--- a/app/styles/_addThisEvent.scss
+++ b/app/styles/_addThisEvent.scss
@@ -9,7 +9,7 @@
 		width: 12rem;
 
 		@media (min-width: 475px) {
-            margin: .8rem auto 0  auto;
+            margin: 1.8rem auto 0  auto;
         }
 
 		&:hover {
