--- a/app/styles/_sections.scss
+++ b/app/styles/_sections.scss
@@ -14,7 +14,7 @@
   margin: 0 auto;
 
   &-fullscreen {
-    min-height: calc(100vh - 4rem);
+    min-height: calc(100vh);
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
