--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -10,7 +10,7 @@
         height: 2rem;
 
         @media (min-width: 475px) {
-            height: 2.5rem;
+            height: 2rem;
         }
     }
 
@@ -21,7 +21,7 @@
         vertical-align: middle;
 
         @media (min-width: 475px) {
-            margin: 2.2rem 0;
+            margin: 2.2rem 0 1.2rem;
         }
 
         @media (min-width: 650px) {
@@ -29,7 +29,8 @@
         }
 
         @media (min-width: 800px) {
-            font-size: 5rem;
+            font-size: 8.8rem;
+            line-height: 8rem;
         }
     }
 
@@ -48,7 +49,7 @@
         @media (min-width: 650px) {
             display: block;
             width: 100%;
-            font-size: 2rem;
+            font-size: 3rem;
         }
 
         @media (min-width: 800px) {
@@ -90,7 +91,7 @@
             border-bottom: $thin-border;
 
             @media (min-width: 375px) {
-                font-size: 1rem;
+                font-size: 1.6rem;
             }
 
             @media (min-width: 650px) {
@@ -105,7 +106,7 @@
         left: -8px;
 
         @media (min-width: 475px) {
-            margin-top: 0.2rem;
+            margin-top: 1.4rem;
         }
 
         p {
@@ -116,19 +117,11 @@
             padding-bottom: 0.4rem;
 
             @media (min-width: 375px) {
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
 
             @media (min-width: 650px) {
                 // border-bottom: $thin-border;
-            }
-
-            &:nth-child(3) {
-                font-size: 1rem;
-
-                @media (min-width: 375px) {
-                    font-size: 1.3rem;
-                }
             }
         }
 
