Mobile header styles

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,6 +1,6 @@
 $white: white;
 $off-white: #FFFDFA;
-$light-grey: #F5F5F5;
+$light-grey: #E6E6E6;
 $black: #382B37;
 $grey: #58585A;
 $blue: #E2F2F5;
