--- a/app/styles/_intro.scss
+++ b/app/styles/_intro.scss
@@ -8,27 +8,27 @@
 
     &_icon {
         height: 2rem;
-
-        @media (min-width: 475px) {
-            height: 2rem;
-        }
     }
 
     h1 {
         text-align: center;
-        font-size: 3rem;
-        margin: 1rem 0;
+        font-size: 5rem;
+        line-height: 5rem;
+        margin: 2rem 0 1.1rem;
         vertical-align: middle;
 
-        @media (min-width: 475px) {
-            margin: 2.2rem 0 1.2rem;
+        @media (min-width: 500px) {
+            font-size: 5rem;
+            margin: 1rem 0;
         }
 
         @media (min-width: 650px) {
-            font-size: 5rem;
+            font-size: 6rem;
+            line-height: 6rem;
+            margin: 2.2rem 0;
         }
 
-        @media (min-width: 800px) {
+        @media (min-width: 850px) {
             font-size: 8.8rem;
             line-height: 8rem;
         }
@@ -36,12 +36,13 @@
 
     .amp {
         @extend h1;
-        font-size: 1rem;
+        font-size: 2.2rem;
         display: block;
         margin: 0;
         width: 100%;
 
-        @media (min-width: 475px) {
+        @media (min-width: 500px) {
+            font-size: 2rem;
             display: inline;
             width: auto;
         }
@@ -52,7 +53,7 @@
             font-size: 3rem;
         }
 
-        @media (min-width: 800px) {
+        @media (min-width: 850px) {
             display: inline;
             width: auto;
         }
@@ -84,17 +85,12 @@
 
         p {
             @include title;
-            font-size: 0.8rem;
+            font-size: 1rem;
             flex: 0 auto;
             margin: 0 2rem;
-            border-top: $thin-border;
-            border-bottom: $thin-border;
-
-            @media (min-width: 375px) {
-                font-size: 1.6rem;
-            }
 
             @media (min-width: 650px) {
+                font-size: 1.6rem;
                 border: 0;
             }
         }
@@ -104,24 +100,21 @@
         display: inline-block;
         position: relative;
         left: -8px;
+        margin-top: 0.5rem;
 
-        @media (min-width: 475px) {
+        @media (min-width: 650px) {
             margin-top: 1.4rem;
         }
 
         p {
             @include subHead;
-            font-size: .8rem;
+            font-size: 1.2rem;
             display: inline;
             vertical-align: middle;
             padding-bottom: 0.4rem;
 
-            @media (min-width: 375px) {
+            @media (min-width: 400px) {
                 font-size: 1.1rem;
-            }
-
-            @media (min-width: 650px) {
-                // border-bottom: $thin-border;
             }
         }
 
