--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -46,22 +46,23 @@
             }
 
             .active & {
-                height: 4rem;
-                flex: 0 0 4rem;
+                height: 3rem;
+                -webkit-flex: 0 0 4rem;
+                flex: 0 0 3rem;
                 opacity: 1;
-                padding-top: 1.4rem;
+                padding-top: 0.9rem;
                 -webkit-transition: height .4s cubic-bezier(0, 1.06, 0.78, 1.06), flex .4s cubic-bezier(0, 1.06, 0.78, 1.06), padding-top .4s cubic-bezier(0, 1.06, 0.78, 1.06);
                 transition: height .4s cubic-bezier(0, 1.06, 0.78, 1.06), flex .4s cubic-bezier(0, 1.06, 0.78, 1.06), padding-top .4s cubic-bezier(0, 1.06, 0.78, 1.06);
             }
 
             &-mobile {
-                flex: 0 0 4rem;
-                height: 4rem;
+                flex: 0 0 3rem;
+                height: 3rem;
                 opacity: 1;
-                color: $off-white;
-                background-color: $black;
+                color: $black;
+                background-color: $off-white;
                 display: block;
-                padding-top: 1.4rem;
+                padding-top: 0.9rem;
 
                 @media (min-width: 650px) {
                     display: none;
