--- a/app/styles/_sections.scss
+++ b/app/styles/_sections.scss
@@ -24,6 +24,18 @@
         padding: 4rem 0;
     }
 
+    &:first-child {
+        padding-top: 4rem;
+
+        @media (min-width: 500px) {
+            padding: 2rem 0;
+        }
+
+        @media (min-width: 650px) {
+            padding: 4rem 0;
+        }
+    }
+
     &:nth-child(2) {
         background: url('../images/floral4.jpg') repeat;
     }
