Add accomodations section

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -6,6 +6,7 @@ $thin-border: 1px solid $light-grey;
     border-radius: 2px;
     -webkit-transition: border .1s, background-color .1s;
     transition: border .1s, background-color .1s;
+    padding: .8rem 2rem;
 }
 
 @mixin thin-btn-hover {
