--- a/app/styles/_guests.scss
+++ b/app/styles/_guests.scss
@@ -1,45 +1,49 @@
 .guests {
 
     .hotel {
-        margin: 1rem 0;
+        margin: 2rem 0 1rem;
         display: flex;
         flex-flow: column nowrap;
 
         @media (min-width: 750px) {
-            flex-flow: row nowrap;
-        }
-
-        &__primary {
-            flex: 1 1 auto;
-
-            @media (min-width: 750px) {
-                flex: 1 1 4rem;
-            }
-
-            a {
-                display: block;
-                width: 100%;
-            }
+            display: block;
+            overflow: auto;
         }
 
         &__image {
+            width: 100%;
+            flex: 1 1 auto;
             margin-bottom: 1rem;
+            order: 1;
+
+            @media (min-width: 750px) {
+                width: 33%;
+                float: left;
+            }
 
             img {
-                max-width: 100%;
+                display: block;
             }
         }
 
         &__details {
+            width: 100%;
             flex: 1 1 auto;
+            order: 2;
 
             @media (min-width: 750px) {
-                flex: 2 2 4rem;
+                float: right;
+                width: 66%;
+                padding-left: 2rem;
+            }
+
+            @media (min-width: 900px) {
                 padding-left: 3rem;
             }
 
             h3 {
                 text-align: center;
+                line-height: 1.8rem;
 
                 @media (min-width: 750px) {
                     margin-top: 0;
@@ -58,7 +62,15 @@
 
         &__cta {
             @include thin-btn;
+            order: 3;
+            width: 100%;
+            flex: 1 1 auto;
             margin-bottom: 1rem;
+
+            @media (min-width: 750px) {
+                float: left;
+                width: 33%;
+            }
 
             &:hover {
                 @include thin-btn-hover;
