--- a/app/styles/_end.scss
+++ b/app/styles/_end.scss
@@ -1,10 +1,10 @@
 .end {
 
-    &__image {
+    &__carousel {
         margin: 1rem auto 0 auto;
         border-radius: 2px;
-        display: block;
-        width: 30rem;
+        width: 35rem;
+        max-width: 100%;
     }
 
     &__text {
