--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'guests';
 @import 'comingSoon';
 @import 'end';
+@import 'carousel';
 
 // RESETS
 
@@ -43,4 +44,8 @@ p {
 
 img {
     max-width: 100%;
+}
+
+button:focus {
+    outline:0;
 }
