--- a/app/styles/_carousel.scss
+++ b/app/styles/_carousel.scss
@@ -2,27 +2,50 @@
 
     &-slider {
         display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: space-around;
+
+        @media (min-width: 500px) {
+            flex-flow: row nowrap;
+        }
 
         button {
-            background:none;
-            border:none;
+            border: none;
             font-size:1em;
         }
     }
 
     &-arrow {
-        flex: 0 8rem;
+        flex: 0 42px;
+        width: 42px;
+        height: 42px;
+        border-radius: 50%;
+        background-color: $grey;
 
         @media (min-width: 500px) {
             flex: 0 12rem;
+            height: 42px;
+            width: 42px;
+        }
+
+        &:hover {
+            @include thin-btn-hover;
         }
 
         img {
             width: 100%;
+            height: 100%;
+
+            @media (min-width: 500px) {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 
     &-prev {
+        order: 2;
 
         img {
             -webkit-transform: rotate(180deg);
@@ -31,17 +54,28 @@
             -o-transform: rotate(180deg);
             transform: rotate(180deg);
         }
+
+        @media (min-width: 500px) {
+            order: 1;
+        }
     }
 
     &-next {
-
+        order: 3;
     }
 
     &-list {
-        margin: 0 .5rem;
+        order: 1;
+        margin: 0 .5rem 1rem;
+        border-radius: 2px;
 
         @media (min-width: 500px) {
+            order: 2;
             margin: 0 2rem;
         }
+    }
+
+    &-slide {
+        border-radius: 2px;
     }
 }
