--- a/app/styles/_carousel.scss
+++ b/app/styles/_carousel.scss
@@ -11,36 +11,35 @@
         }
 
         button {
-            border: none;
             font-size:1em;
         }
     }
 
     &-arrow {
         flex: 0 42px;
-        width: 42px;
+        min-width: 42px;
         height: 42px;
         border-radius: 50%;
-        background-color: $grey;
+        background: 0;
+        padding: 0;
+        border: 1px solid $grey;
 
         @media (min-width: 500px) {
             flex: 0 12rem;
-            height: 42px;
-            width: 42px;
         }
 
         &:hover {
-            @include thin-btn-hover;
+            border: 2px solid $grey;
+        }
+
+        .disabled & {
+            opacity: .3;
         }
 
         img {
-            width: 100%;
+            width: 60%;
             height: 100%;
-
-            @media (min-width: 500px) {
-                width: 100%;
-                height: 100%;
-            }
+            margin: 0 auto;
         }
     }
 
@@ -77,5 +76,9 @@
 
     &-slide {
         border-radius: 2px;
+
+        .disabled & {
+            border: 2px solid $light-grey;
+        }
     }
 }
