Add details section

--- a/app/styles/_guests.scss
+++ b/app/styles/_guests.scss
@@ -59,6 +59,14 @@
                     text-align: left;
                 }
             }
+
+            a {
+                text-decoration: underline;
+
+                &:hover {
+                    color: $black;
+                }
+            }
         }
 
         &__cta {
