--- a/app/styles/_details.scss
+++ b/app/styles/_details.scss
@@ -1,3 +1,45 @@
 .details {
-    // background-color: $blue;
+
+  &__section {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 2rem;
+
+    &--item {
+        flex: 1 1 100%;
+        padding: 0 2rem;
+        margin-bottom: 1rem;
+
+        @media (min-width: 750px) {
+            flex: 1 1 48%;
+        }
+    }
+
+    h4 {
+        font-family: $oswald;
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        border-bottom: 1px solid $grey;
+        display: inline-block;
+        padding-bottom: .6rem;
+        margin-top: 0;
+        margin-bottom: 0.4rem;
+    }
+
+    p {
+        text-align: center;
+        max-width: 30rem;
+        display: block;
+        margin: 1rem auto;
+    }
+
+    a {
+        text-decoration: underline;
+
+        &:hover {
+            color: $black;
+        }
+    }
+  }
 }
