--- a/app/styles/_registry.scss
+++ b/app/styles/_registry.scss
@@ -29,7 +29,8 @@
     img {
         max-width: 100%;
         width: 14rem;
-      fill: $grey;
+        max-height: 3.4rem;
+        fill: $grey;
 
       @media (min-width: 850px){
         width: 75%;
