Add recommendations section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'details';
 @import 'addThisEvent';
 @import 'guests';
+@import 'favorites';
 @import 'comingSoon';
 @import 'end';
 @import 'carousel';
