--- a/app/styles/_favorites.scss
+++ b/app/styles/_favorites.scss
@@ -20,18 +20,23 @@
 		justify-content: space-between;
 
 		&--item {
-			flex: 0 0 30%;
+			flex: 0 0 100%;
 		    margin-bottom: 1rem;
+
+			@media(min-width: 500px){
+				flex: 0 0 46%;
+			}
+
+			@media(min-width: 750px){
+				flex: 0 0 30%;
+			}
 		}
 	}
 
 	&__image {
 		width: 100%;
-		height: 9rem;
 		margin-bottom: 1rem;
 		display: block;
-		background-position: center;
-		background-size: cover;
 	}
 
 	&__details {
@@ -45,15 +50,5 @@
 		h3 {
 		    margin-bottom: 0.6rem;
 		}
-	}
-}
-
-.favorites__image {
-	&:nth-of-type(1){
-		background-image: url('../images/starprovisions.jpg');
-	}
-
-	&:nth-of-type(2){
-		background-image: url('../images/taqueriadelsol.jpg');
 	}
 }
