--- a/app/styles/_favorites.scss
+++ b/app/styles/_favorites.scss
@@ -37,6 +37,11 @@
 		width: 100%;
 		margin-bottom: 1rem;
 		display: block;
+
+		img {
+			width: 100%;
+			border-radius: 2px;
+		}
 	}
 
 	&__details {
