Add links to pictures

--- a/app/styles/_favorites.scss
+++ b/app/styles/_favorites.scss
@@ -2,6 +2,14 @@
 
 	&__description {
 		text-align: center;
+
+		a {
+			text-decoration: underline;
+
+	        &:hover {
+	            color: $black;
+	        }
+		}
 	}
 
 	&__headline {
